test/parsing/errors/invalidNewForm.compopts
--detailed-errors # invalidNewForm-detailed.good
--no-detailed-errors # invalidNewForm-brief.good
